<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.deezy.boxingscore.MainActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="32sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:textSize="24sp"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:id="@+id/round_number"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="16dp"
            android:textSize="24sp"
           />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:gravity="center_horizontal"
           android:orientation="vertical">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/red"
               android:textColor="@color/white"
               android:layout_margin="16dp"
               android:textSize="24sp"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/red_score"
               android:id="@+id/redScore"
               android:textColor="@color/white"
               android:textSize="24sp"/>
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/red_1"
               android:text="@string/red_1"
               />
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/red_2"
               android:text="@string/red_2"
               />
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/red_3"
               android:text="@string/red_3"
               />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/knockout"
               android:textColor="@color/white"
               android:textSize="24sp"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:text="@string/red_score"
               android:textSize="16sp"
               android:id="@+id/redKON"/>

           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/red_ko"
               android:text="@string/red_1"
               />

       </LinearLayout>
        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginTop="16dp">
        </View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue"
                android:textColor="@color/white"
                android:layout_margin="16dp"
                android:textSize="24sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue_score"
                android:id="@+id/blueScore"
                android:textColor="@color/white"
                android:textSize="24sp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/blue_1"
                android:text="@string/red_1"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/blue_2"
                android:text="@string/red_2"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/blue_3"
                android:text="@string/red_3"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/knockout"
                android:textColor="@color/white"
                android:textSize="24sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/red_score"
                android:textSize="16sp"
                android:id="@+id/blueKON"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/blue_ko"
                android:text="@string/red_1"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/nextRound"
        android:text="@string/next_round"
        android:layout_margin="16dp"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/reset"
            android:id="@+id/reset"/>
    </LinearLayout>
    </LinearLayout>
</ScrollView>
